<resources>


    <string name="app_name">VoiceTimeStrike</string>
    
    <string name="notificationText">voice time strike service is running</string>
    
    <string name="toastStartText">start voice time strike service</string>
    <string name="toastStopText">stop voice time strike service</string>
    
   	<string name="minute1">one minute</string>
    <string name="minute5">five minute</string>
    <string name="minute10">ten minute</string>
    <string name="minute15">fifteen minute</string>
    <string name="minute30">thirty minute</string>
    <string name="minute60">sixty minute</string>
    
    <string name="singleClick">single click</string>
    <string name="doubleClick">double click</string>
    
    <string name="languageChinaese">Chinaese</string>
    <string name="languageEnglish">English</string>
    
    <string name="language">Language</string>
    <string name="about">About</string>
    <string name="timerInerval">Timer interval(m)</string>    
    
    
    <string name="enableTimestrike">Enable time Strike</string>
    <string name="timestrike">time strike</string>
    <string name="startTime">Start time</string>
    <string name="stopTime">Stop time</string>    
	
    <string name="wireControl">Headset</string>
    <string name="usewireControl">Use headset</string>    
    <string name="wireControlWay">Headset control way</string>
    <string name="wireControlWaySummary">single or double click media button</string>
    
    <string name="pref_key_boot_title">Enable start on boot</string>
    
    <string name="pref_key_quit_time_summary">not quit when 00:00</string>
    <string name="pref_key_quit_time_title">Auto quit</string>
    
    <string name="pref_key_timeformat12_summary">24 hour format</string>
    <string name="pref_key_timeformat12_title">12 hour format</string>    
    
    <string name="language_default">en</string>
    
    <string name="btnOk">OK</string>
    <string name="btnCancel">Cancel</string>
    
    <string name="pref_key_boot_enable">pref_key_boot_enable</string>
    
    <string-array name="pref_key_interval_values">
        <item>1</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>30</item>
        <item>60</item>        
    </string-array>
    
    <string-array name="pref_headset_values">
        <item>single</item>
        <item>double</item>
    </string-array>     
   
    <string-array name="pref_key_language_values">
        <item>cn</item>
        <item>en</item>
    </string-array>     

</resources>