<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <CheckBoxPreference        
        android:key="@string/pref_key_boot_enable"
        android:title="@string/pref_key_boot_title"
        android:defaultValue="false" />
    
	<com.sh2600.timermaster.TimePreference
		android:key="pref_key_quit_time"
        android:title="@string/pref_key_quit_time_title"
        android:summary="@string/pref_key_quit_time_summary" 
        android:defaultValue="09:00" 
        android:showDefault="true" />
   
    <CheckBoxPreference
        android:key="pref_key_timeformat12"
        android:title="@string/pref_key_timeformat12_title" 
        android:summary="@string/pref_key_timeformat12_summary"
        android:defaultValue="false"
        android:enabled="false" />   
    
    <PreferenceCategory
        android:key="pref_key_headset" 
        android:title="@string/wireControl" >
		<CheckBoxPreference
	        android:defaultValue="true"
	        android:key="pref_key_headset_enable"
	        android:title="@string/usewireControl" />

		<ListPreference 
		    android:dependency="pref_key_headset_enable"
		    android:key="pref_key_headset_way"
		    android:entries="@array/pref_headset_titles"
		    android:entryValues="@array/pref_headset_values"
		    android:title="@string/wireControlWay"
		    android:summary="@string/wireControlWaySummary"
		    android:defaultValue="double"
		    />

	</PreferenceCategory>            
    
    <PreferenceCategory 
        android:title="@string/timestrike"
        android:key="pref_key_interval">
        
      	<CheckBoxPreference
	        android:defaultValue="false"
	        android:key="pref_key_interval_enable"	        
	        android:title="@string/enableTimestrike" />
      	
		<com.sh2600.timermaster.TimePreference
			android:key="pref_key_interval_starttime"
	        android:showDefault="true"
	        android:defaultValue="07:00"
	        android:title="@string/startTime" />   
	        
		<com.sh2600.timermaster.TimePreference
			android:key="pref_key_interval_stoptime"
	        android:showDefault="true"
	        android:defaultValue="08:00"
	        android:title="@string/stopTime" />	
	        
		<ListPreference 
		    android:key="pref_key_interval_interval"
		    android:entries="@array/pref_key_interval_titles"
		    android:entryValues="@array/pref_key_interval_values"
		    android:title="@string/timerInerval"		
		    android:defaultValue="10"    
		    />	
            
    </PreferenceCategory> 

    <PreferenceCategory>        
		<ListPreference 
		    android:key="pref_key_language"
		    android:entries="@array/pref_key_language_titles"
		    android:entryValues="@array/pref_key_language_values"
		    android:title="@string/language"		
		    android:defaultValue="@string/language_default"    
		    />      
		      
        <!-- about -->
		<Preference 
	            android:key="pref_key_about"            
	            android:summary="Copyright@jyl9wh@gmail.com"
	            android:title="@string/about" />
	</PreferenceCategory>          

</PreferenceScreen>